[package]
name = "favicon-rs"
version = "0.5.0"
edition = "2021"
authors = ["Leonard Woo <leo_916@yahoo.com>"]
license = "BSD-3-Clause"
description = "A favicon generation tool"
readme = "README.md"
keywords = ["cli", "favicon"]
categories = ["command-line-utilities"]
homepage = "https://github.com/leonardwoo/favicon-rs"
publish = true
build = "build.rs"

[[bin]]
name = "favicon"
path = "src/main.rs"
bench = false

[dependencies]
image = "0.24.7"
futures = "0.3.30"

[package.metadata.winres]
FileDescription = "Favicon toolkit with Rust"
LegalCopyright = "Copyright © Leonard Woo"
OriginalFilename = "favicon.exe"
ProductName = "Favicon"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
